--- a/Display/appsettings.json
+++ b/Display/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "PrismDBConnectionString": "Server=localhost;Database=PrismDB;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "AuthenticationDBConnectionString": "Server=localhost;Database=AuthenticationDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
+  "ServiceOptions": {
+    "PrismDBConnectionString": "Server=localhost;Database=PrismDB;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "AuthenticationDBConnectionString": "Server=localhost;Database=AuthenticationDB;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "UseInMemoryRepository": "True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
