-- Added charting compnents

--- a/Display/appsettings.json
+++ b/Display/appsettings.json
@@ -6,7 +6,7 @@
   "ServiceOptions": {
     "PrismDBConnectionString": "Server=localhost;Database=Prism_dev;Trusted_Connection=True;MultipleActiveResultSets=true;",
     "AuthenticationDBConnectionString": "Server=localhost;Database=AuthenticationDB;Trusted_Connection=True;MultipleActiveResultSets=true;",
-    "UseInMemoryRepository": "False"
+    "UseInMemoryRepository": "True"
   },
   "Logging": {
     "LogLevel": {
